force-app/main/default/objects/Material_Requirements_Planning__c/Material_Requirements_Planning__c.object-meta.xml
<CustomObject>
    <label>Material Requirements Planning</label>
    <nameField>
        <displayFormat>MRP-{000000}</displayFormat>
        <label>Material Requirements Planning Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Material Requirements Plannings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>