force-app/main/default/objects/Material_Requirements_Planning__c/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entity</label>
    <referenceTo>LegalEntity</referenceTo>
    <relationshipLabel>Material Requirements Plannings</relationshipLabel>
    <relationshipName>Material_Requirements_Plannings</relationshipName>
    <type>Lookup</type>
</CustomField>