force-app/main/default/objects/Material_Requirements_Planning__c/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Material</label>
    <referenceTo>Material__c</referenceTo>
    <relationshipLabel>Material Requirements Plannings</relationshipLabel>
    <relationshipName>Material_Requirements_Plannings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>