force-app/main/default/objects/Material_Requirements_Planning__c/fields/Quantity_to_Buy__c.field-meta.xml
<CustomField>
    <fullName>Quantity_to_Buy__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Quantity to Buy</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>