force-app/main/default/objects/Material_Requirements_Planning__c/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warehouse</label>
    <referenceTo>Warehouse__c</referenceTo>
    <relationshipLabel>Material Requirements Plannings</relationshipLabel>
    <relationshipName>Material_Requirements_Plannings</relationshipName>
    <type>Lookup</type>
</CustomField>