force-app/main/default/objects/Material_Requirements_Planning__c/fields/Work_Order_Material__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Material__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Work Order Material</label>
    <referenceTo>Work_Order_Material__c</referenceTo>
    <relationshipLabel>Material Requirements Plannings</relationshipLabel>
    <relationshipName>Material_Requirements_Plannings</relationshipName>
    <type>Lookup</type>
</CustomField>