force-app/main/default/objects/Material_Requirements_Planning__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Material__c</columns>
    <columns>Unit_of_Measure__c</columns>
    <columns>Unit_Price__c</columns>
    <columns>Supplier__c</columns>
    <columns>Entity__c</columns>
    <columns>Warehouse__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>